force-app/main/default/objects/Contact/fields/Information_Session_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Information_Session_Date_and_Time__c</fullName>
    <inlineHelpText>Admissions Information Session Date and TIme</inlineHelpText>
    <label>Information Session Date and Time</label>
    <type>DateTime</type>
</CustomField>