force-app/main/default/objects/Contact/fields/Interest_Form_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Form_Submission_Date__c</fullName>
    <label>Interest Form Submission Date</label>
    <type>Date</type>
</CustomField>