force-app/main/default/objects/Contact/fields/Internship_Connector__c.field-meta.xml
<CustomField>
    <fullName>Internship_Connector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to track which contact introduced YU to this contact</inlineHelpText>
    <label>Internship Connector</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Participant, Participant Donor, Prospective Student</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Internship Connector)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>