force-app/main/default/objects/Contact/fields/Is_Indiv__c.field-meta.xml
<CustomField>
    <fullName>Is_Indiv__c</fullName>
    <formula>CONTAINS( Account.Name ,&quot;Individual&quot;)</formula>
    <label>Is Indiv</label>
    <type>Checkbox</type>
</CustomField>