force-app/main/default/objects/Contact/fields/IsCE__c.field-meta.xml
<CustomField>
    <fullName>IsCE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Standard contacts which now have moved to RT = Individual but are CE related contacts</description>
    <label>IsCE</label>
    <type>Checkbox</type>
</CustomField>