force-app/main/default/objects/Contact/fields/IsDonor__c.field-meta.xml
<CustomField>
    <fullName>IsDonor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be checked for any contact who is prospect donor or has already made donation and has a household account</description>
    <inlineHelpText>This will be checked for any contact who is prospect donor or has already made donation and has a household accoun</inlineHelpText>
    <label>IsDonor</label>
    <type>Checkbox</type>
</CustomField>