force-app/main/default/objects/Contact/fields/ISIS_Group__c.field-meta.xml
<CustomField>
    <fullName>ISIS_Group__c</fullName>
    <inlineHelpText>Used for participants in the ISIS/PACE project only.</inlineHelpText>
    <label>PACE Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PACE - Treatment</fullName>
            </value>
            <value>
                <fullName>PACE - Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>