force-app/main/default/objects/Contact/fields/Largest_Gift_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Largest_Gift_Organization_Name__c</fullName>
    <inlineHelpText>Add the Organization Name which received the donation</inlineHelpText>
    <label>Largest Gift to Other Org Name</label>
    <type>TextArea</type>
</CustomField>