force-app/main/default/objects/Contact/fields/Last_Donated_site__c.field-meta.xml
<CustomField>
    <fullName>Last_Donated_site__c</fullName>
    <label>Last Donated site</label>
    <length>50</length>
    <type>Text</type>
</CustomField>