force-app/main/default/objects/Contact/fields/Last_Logged_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Logged_Call__c</fullName>
    <description>timestamp of when last admission call record is created</description>
    <label>Last Logged Call</label>
    <type>DateTime</type>
</CustomField>