force-app/main/default/objects/Contact/fields/Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified_Date__c</fullName>
    <description>Rollup field: of this student&apos;s current (no end date) employment and higher ed records, the OLDEST last verified date.</description>
    <inlineHelpText>Rollup field: of this student&apos;s current (no end date) employment and higher ed records, the oldest last verified date.</inlineHelpText>
    <label>CAS Last Verified Date</label>
    <type>Date</type>
</CustomField>