force-app/main/default/objects/Contact/fields/Lead_Score_Value__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Value__c</fullName>
    <label>Lead Score Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>