force-app/main/default/objects/Contact/fields/Learning_Community__c.field-meta.xml
<CustomField>
    <fullName>Learning_Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Community</label>
    <referenceTo>Learning_Community__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>