force-app/main/default/objects/Contact/fields/Log_a_Call__c.field-meta.xml
<CustomField>
    <fullName>Log_a_Call__c</fullName>
    <description>Link to log a call for this contact</description>
    <formula>HYPERLINK(&quot;/00T/e?title=Call&amp;who_id=&quot; + Id + &quot;&amp;followup=1&amp;tsk5=Call&amp;retURL=%2F&quot; + Id, &quot;Log a call&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log a Call</label>
    <type>Text</type>
</CustomField>