force-app/main/default/objects/Contact/fields/Mailing_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Type__c</fullName>
    <label>Mailing Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Primary Home</fullName>
            </value>
            <value>
                <fullName>Secondary Home</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>PO Box</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>