force-app/main/default/objects/Contact/fields/Mailing_Label_Addressee__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Label_Addressee__c</fullName>
    <description>First line of mailing label: Addresse if specified, otherwise First + Last</description>
    <formula>IF(Addressee__c = &quot;&quot;,
  FirstName &amp; &quot; &quot; &amp;  LastName,
  Addressee__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Label: Addressee</label>
    <type>Text</type>
</CustomField>