force-app/main/default/objects/Contact/fields/Mailing_Label_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Label_City__c</fullName>
    <description>City corresponding to the selected Preferred Mailing Address of the contact.</description>
    <formula>CASE( Primary_Address__c,
   &quot;Work&quot;,  MailingCity, 
   &quot;Home&quot;,  OtherCity,
   &quot;ERROR: No preferred mailing address selected&quot;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Label: City</label>
    <type>Text</type>
</CustomField>