force-app/main/default/objects/Contact/fields/Mailing_Label_Company__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Label_Company__c</fullName>
    <description>If Preferred Mailing Address is Work, include the company name on the label, unless the account is an Individuals account. If Preferred Mailing Address is Home or Additional, don&apos;t include the company name.</description>
    <formula>CASE(Primary_Address__c,
&quot;Work&quot;, IF(Account.RecordTypeId=&quot;012500000000mO0&quot;,&apos;&apos;, Account.Name),
&quot;Home&quot;, &quot; &quot;,
&quot;Additional&quot;, &quot; &quot;,
&quot;ERROR: No preferred mailing address selected&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Label: Company</label>
    <type>Text</type>
</CustomField>