force-app/main/default/objects/Contact/fields/Mailing_Label_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Label_Postal_Code__c</fullName>
    <description>Postal code corresponding to the selected Preferred Mailing Address of the contact.</description>
    <formula>CASE( Primary_Address__c,
   &quot;Work&quot;,  MailingPostalCode, 
   &quot;Home&quot;,  OtherPostalCode,
   &quot;ERROR: No preferred mailing address selected&quot;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Label: Postal Code</label>
    <type>Text</type>
</CustomField>