force-app/main/default/objects/Contact/fields/Mailing_Label_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Label_State__c</fullName>
    <description>State corresponding to the selected Preferred Mailing Address of the contact.</description>
    <formula>CASE( Primary_Address__c, 
&quot;Work&quot;, MailingState, 
&quot;Home&quot;, OtherState, 
&quot;Default Household&quot;,  OtherState,
&quot;Additional&quot;, OtherState,
&quot;ERROR: No preferred mailing address selected&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Label: State</label>
    <type>Text</type>
</CustomField>