force-app/main/default/objects/Contact/fields/Mailing_Label_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Label_Street__c</fullName>
    <description>Second line of mailing label: street address for the selected Preferred Mailing Address.</description>
    <formula>CASE( Primary_Address__c,
   &quot;Work&quot;,  MailingStreet, 
   &quot;Home&quot;,  OtherStreet,
   &quot;ERROR: No preferred mailing address selected&quot;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Label: Street</label>
    <type>Text</type>
</CustomField>