force-app/main/default/objects/Contact/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <formula>hyperlink (&quot;/servlet/servlet.Integration?lid=00b50000000kPgN&amp;eid=&quot; &amp;Id, IMAGE( &quot;servlet/servlet.FileDownload?file=01550000000Jh72&quot;, &quot;image from Documents tab&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map</label>
    <type>Text</type>
</CustomField>