force-app/main/default/objects/Contact/fields/MATCH_Contact_Id_Auto__c.field-meta.xml
<CustomField>
    <fullName>MATCH_Contact_Id_Auto__c</fullName>
    <description>This is for Internship Matching</description>
    <displayFormat>CON-{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>MATCH Contact Id Auto</label>
    <type>AutoNumber</type>
</CustomField>