force-app/main/default/objects/Contact/fields/Military_Service__c.field-meta.xml
<CustomField>
    <fullName>Military_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated from Form Assembly&apos;s &quot;Student Interest Form&quot; YUBA&apos;s specific veteran question</description>
    <inlineHelpText>Populated from YUBA&apos;s specific veteran question on the &quot;Student Interest Form&quot;</inlineHelpText>
    <label>Military Service?</label>
    <type>Checkbox</type>
</CustomField>