force-app/main/default/objects/Contact/fields/Mini_experiment_Group__c.field-meta.xml
<CustomField>
    <fullName>Mini_experiment_Group__c</fullName>
    <description>For Research and Evaluation on large external study (called IES).  conducting mini-experiment at sites and a randomized control trial to be able to track control group members</description>
    <inlineHelpText>Used to track control group members at participating sites</inlineHelpText>
    <label>Mini-experiment Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mini-experiment - Control</fullName>
            </value>
            <value>
                <fullName>Mini-experiment - Treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>