force-app/main/default/objects/Contact/fields/mkto2__Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>mkto2__Acquisition_Date__c</fullName>
    <label>Acquisition Date</label>
    <type>DateTime</type>
</CustomField>