force-app/main/default/objects/Contact/fields/mkto2__Acquisition_Program__c.field-meta.xml
<CustomField>
    <fullName>mkto2__Acquisition_Program__c</fullName>
    <label>Acquisition Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>