force-app/main/default/objects/Contact/fields/mkto2__Inferred_Country__c.field-meta.xml
<CustomField>
    <fullName>mkto2__Inferred_Country__c</fullName>
    <label>Inferred Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>