force-app/main/default/objects/Contact/fields/mkto2__Inferred_Metropolitan_Area__c.field-meta.xml
<CustomField>
    <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
    <label>Inferred Metropolitan Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>