force-app/main/default/objects/Contact/fields/mkto2__Original_Search_Engine__c.field-meta.xml
<CustomField>
    <fullName>mkto2__Original_Search_Engine__c</fullName>
    <label>Original Search Engine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>