force-app/main/default/objects/Contact/fields/mkto_si__HideDate__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__HideDate__c</fullName>
    <label>Hide Date</label>
    <type>Date</type>
</CustomField>