force-app/main/default/objects/Contact/fields/mkto_si__Priority__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Priority__c</fullName>
    <label>Engagement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>