force-app/main/default/objects/Contact/fields/mkto_si__View_in_Marketo__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__View_in_Marketo__c</fullName>
    <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Contact&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View in Marketo</label>
    <type>Text</type>
</CustomField>