force-app/main/default/objects/Contact/fields/Most_Recent_Cohort_Date_Value__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Cohort_Date_Value__c</fullName>
    <formula>Most_Recent_Engagement__r.Cohort_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Cohort Date Value</label>
    <type>Date</type>
</CustomField>