force-app/main/default/objects/Contact/fields/Most_Recent_Education_ID__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Education_ID__c</fullName>
    <formula>Most_Recent_Education_Record__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Education ID</label>
    <type>Text</type>
</CustomField>