force-app/main/default/objects/Contact/fields/Most_Recent_Education_Record__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Education_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Education Record</label>
    <referenceTo>Higher_Education__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>