force-app/main/default/objects/Contact/fields/Most_Recent_Employment_ID__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Employment_ID__c</fullName>
    <formula>Most_recent_Employment_record__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Employment ID</label>
    <type>Text</type>
</CustomField>