force-app/main/default/objects/Contact/fields/Most_recent_Employment_record__c.field-meta.xml
<CustomField>
    <fullName>Most_recent_Employment_record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most recent Employment record</label>
    <referenceTo>Employment__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>