force-app/main/default/objects/Contact/fields/Most_Recent_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by Process Builder</description>
    <inlineHelpText>The engagement created most recently for this student</inlineHelpText>
    <label>Most Recent Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>