force-app/main/default/objects/Contact/fields/Most_Recent_Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Pipeline_Stage__c</fullName>
    <description>Displays the Pipeline Stage of the most recent engagement associated with the Contact Record. This value is displayed using a Roll Up Summary Helper roll up job.</description>
    <inlineHelpText>Displays the Pipeline Stage of the most recent engagement associated with the Contact Record. This value is displayed using a Roll Up Summary Helper roll up job.</inlineHelpText>
    <label>Most Recent Pipeline Stage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>