force-app/main/default/objects/Contact/fields/Most_Recent_Status__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Status__c</fullName>
    <description>Status of the student/prospect&apos;s most recent engagement.</description>
    <label>Most Recent Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>