force-app/main/default/objects/Contact/fields/MRCohort_Formula__c.field-meta.xml
<CustomField>
    <fullName>MRCohort_Formula__c</fullName>
    <description>FOr data migration purpose</description>
    <formula>IF( Text(Most_Recent_Engagement__r.Cohort__c) = Cohort__c , &apos;No Need Migration&apos;,  Text(Most_Recent_Engagement__r.Cohort__c) )</formula>
    <label>MRCohort Formula</label>
    <type>Text</type>
</CustomField>