force-app/main/default/objects/Contact/fields/MRE_Pipeline_stage__c.field-meta.xml
<CustomField>
    <fullName>MRE_Pipeline_stage__c</fullName>
    <formula>Most_Recent_Engagement__r.PipelineStage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRE Pipeline stage</label>
    <type>Text</type>
</CustomField>