force-app/main/default/objects/Contact/fields/MRE_SITE__c.field-meta.xml
<CustomField>
    <fullName>MRE_SITE__c</fullName>
    <formula>TEXT( Most_Recent_Engagement__r.Site__c )</formula>
    <label>MRE SITE</label>
    <type>Text</type>
</CustomField>