force-app/main/default/objects/Contact/fields/MRStatus_formula__c.field-meta.xml
<CustomField>
    <fullName>MRStatus_formula__c</fullName>
    <description>for data migration</description>
    <formula>IF( Text(Most_Recent_Engagement__r.Status__c) =  Most_Recent_Status__c, &apos;No Need Migration&apos;,  Text(Most_Recent_Engagement__r.Status__c) )</formula>
    <label>MRStatus formula</label>
    <type>Text</type>
</CustomField>