force-app/main/default/objects/Contact/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <label>MSA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New York, Newark, Jersey City</fullName>
            </value>
            <value>
                <fullName>Atlanta, Roswell, Sandy Springs</fullName>
            </value>
            <value>
                <fullName>Miami, Ft Lauderdale, West Palm Beach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>