force-app/main/default/objects/Contact/fields/Name_History__c.field-meta.xml
<CustomField>
    <fullName>Name_History__c</fullName>
    <description>Custom field for Full Name, in order to use Track Changes</description>
    <label>Name History</label>
    <length>64</length>
    <type>Text</type>
</CustomField>