force-app/main/default/objects/Contact/fields/Name_is_Preferred_Not_Legal__c.field-meta.xml
<CustomField>
    <fullName>Name_is_Preferred_Not_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To stop the trigger that captures the legal name fields from the first name, last name fields</description>
    <label>Approval for Preferred Name</label>
    <type>Checkbox</type>
</CustomField>