force-app/main/default/objects/Contact/fields/NCOA_Date_Cleaned__c.field-meta.xml
<CustomField>
    <fullName>NCOA_Date_Cleaned__c</fullName>
    <description>Date the last NCOA was applied to the record.</description>
    <inlineHelpText>Date the last NCOA was applied to the record.</inlineHelpText>
    <label>NCOA Date Cleaned</label>
    <type>Date</type>
</CustomField>