force-app/main/default/objects/Contact/fields/NCOA_Move_Date_YYYYMM__c.field-meta.xml
<CustomField>
    <fullName>NCOA_Move_Date_YYYYMM__c</fullName>
    <description>March 2015 ROI NCOA Move Date</description>
    <label>NCOA Move Date YYYYMM</label>
    <length>6</length>
    <type>Text</type>
</CustomField>