force-app/main/default/objects/Contact/fields/NCOA_Move_Type__c.field-meta.xml
<CustomField>
    <fullName>NCOA_Move_Type__c</fullName>
    <description>March 2015 ROI NCOA Move Type</description>
    <inlineHelpText>I = Individual
F = Family
B = Business</inlineHelpText>
    <label>NCOA Move Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>