force-app/main/default/objects/Contact/fields/NCOA_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>NCOA_Status_Flag__c</fullName>
    <description>March 2015 ROI NCOA Status Flag
July 2015 Melissa Data NCOA Status Flag</description>
    <inlineHelpText>ROI:
V = Verified
N = Null (no match flag)
M = Multi-Match

Melissa Data:
1 = Moved - new address now on file
2 = Moved but not exact match - new address now on file
3 = Validated Address
7 = Invalid Address</inlineHelpText>
    <label>NCOA Status Flag</label>
    <length>3</length>
    <type>Text</type>
</CustomField>