force-app/main/default/objects/Contact/fields/Next_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Next_Birthday__c</fullName>
    <formula>IF(
 /* special case for Leap Day birthdays. Good until 2100 */
 AND(month(Birthdate) = 2, day(Birthdate) = 29), 
    IF(TODAY() &gt;= DATE(year(today()), 3, 1), 
     IF(MOD(YEAR(TODAY()) + 1 ,4) = 0,  /* Today is 3/1 or later; is next year a leap year? */
      DATE(YEAR(TODAY())+1, 2, 29),
      DATE(YEAR(TODAY())+1, 2, 28)),
     IF(MOD(YEAR(TODAY()) ,4) = 0,  /* Today is less than 3/1; is this year a leap year? */
      DATE(YEAR(TODAY()), 2, 29),
      DATE(YEAR(TODAY()), 2, 28))
     ),
    
 /* normal non-leap year case: */
 DATE(
   IF(TODAY()&lt;=date(year(today()),month(Birthdate),DAY(Birthdate)),
    YEAR(TODAY()),
    YEAR(TODAY())+1
   ),
 month(Birthdate),DAY(Birthdate))
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Birthday</label>
    <type>Date</type>
</CustomField>