force-app/main/default/objects/Contact/fields/No_Children__c.field-meta.xml
<CustomField>
    <fullName>No_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the donor have no children? For more details see cases CA-08756 and CA-08946.</description>
    <inlineHelpText>Check this box if the donor has no children.</inlineHelpText>
    <label>No Children?</label>
    <type>Checkbox</type>
</CustomField>