force-app/main/default/objects/Contact/fields/No_Employment_History_on_File__c.field-meta.xml
<CustomField>
    <fullName>No_Employment_History_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Employment History on File</label>
    <type>Checkbox</type>
</CustomField>