force-app/main/default/objects/Contact/fields/No_Higher_Ed_History_on_File__c.field-meta.xml
<CustomField>
    <fullName>No_Higher_Ed_History_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No_Higher_Ed_History_on_File</label>
    <type>Checkbox</type>
</CustomField>